add link to new visual

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <ul>
     <li><a href="visualizations/basic/index.html">basic<a> - initial demo</li>
     <li><a href="visualizations/bubble/index.html">bubble<a> - initial demo</li>
+    <li><a href="visualizations/new_cases_per_date/index.html">bubble<a> - initial demo</li>
 </ul>
 <body>
