--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>These are community contributed</p>
 <ul>
     <li><a href="visualizations/basic/index.html">basic<a> - initial demo</li>
-    <li><a href="visualizations/bubble/index.html">bubble<a> - initial demo</li>
-    <li><a href="visualizations/new_cases_per_date/index.html">bubble<a> - initial demo</li>
+    <li><a href="visualizations/bubble/index.html">bubble<a> - nodes as bigger bubbles</li>
+    <li><a href="visualizations/new_cases_per_date/index.html">time series<a> - new cases by date</li>
 </ul>
 <body>
