--- a/visualizations/basic/index.html
+++ b/visualizations/basic/index.html
@@ -10,7 +10,7 @@
         var linkpath = ("https://maldiviandevelopers.github.io/mv-covid19-graph/edges.csv");
         var nodepath = ("https://maldiviandevelopers.github.io/mv-covid19-graph/nodes.csv");
 
-        var width = 1000, height = 600;
+        var width = screen.width, height = screen.height;
 
         var color = d3.scale.category20();
 
