relative links in basic updated nodes/edges

--- a/visualizations/basic/index.html
+++ b/visualizations/basic/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
     <script>
 
-        var linkpath = ("https://maldiviandevelopers.github.io/mv-covid19-graph/edges.csv");
-        var nodepath = ("https://maldiviandevelopers.github.io/mv-covid19-graph/nodes.csv");
+        var linkpath = ("../../../edges.csv");
+        var nodepath = ("../../../nodes.csv");
 
         var width = screen.width, height = screen.height;
 
