--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <li><a href="visualizations/basic/index.html">basic<a> - initial demo</li>
     <li><a href="visualizations/bubble/index.html">bubble<a> - nodes as bigger bubbles</li>
     <li><a href="visualizations/new_cases_per_date/index.html">time series<a> - new cases by date</li>
+    <li><a href="visualizations/new_cases_per_date/index.html">colored cluster nodes<a> - like bubble but with colored clusters</li>
 </ul>
 <body>
