--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <li><a href="visualizations/bubble/index.html">bubble<a> - nodes as bigger bubbles</li>
     <li><a href="visualizations/new_cases_per_date/index.html">time series<a> - new cases by date</li>
     <li><a href="visualizations/cluster_node/index.html">colored cluster nodes<a> - like bubble but with colored clusters</li>
+    <li><a href="visualizations/island_doughnut/index.html">cases from islands<a> - a doughnut</li>
 </ul>
 <body>
